--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,14 +9,14 @@
         <item name="android:windowLightStatusBar">false</item>
     </style>
 
-    <style name="WhiteTheme" parent="Theme.AppCompat.Light">
+    <style name="LightTheme" parent="Theme.AppCompat.Light">
         <item name="colorPrimary">#FFFFFF</item>
         <item name="colorPrimaryDark">#FFFFFF</item>
         <item name="colorAccent">#000000</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
-    <style name="BlackTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="DarkTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">#000000</item>
         <item name="colorPrimaryDark">#000000</item>
         <item name="colorAccent">#000000</item>
