--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimaryDark">#D96C00</item>
         <item name="colorAccent">#007FFF</item>
         <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
 
     <style name="LightTheme" parent="Theme.AppCompat.Light">
@@ -14,6 +15,7 @@
         <item name="colorPrimaryDark">#FFFFFF</item>
         <item name="colorAccent">#000000</item>
         <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
 
     <style name="DarkTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -21,6 +23,7 @@
         <item name="colorPrimaryDark">#000000</item>
         <item name="colorAccent">#000000</item>
         <item name="android:windowLightStatusBar">false</item>
+        <item name="android:windowContentOverlay">@null</item>
     </style>
 
 </resources>
