Improve CustomTheme and fix minor bugs

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,6 @@
         <item name="colorPrimary">#FF8000</item>
         <item name="colorPrimaryDark">#D96C00</item>
         <item name="colorAccent">#007FFF</item>
-        <item name="android:windowLightStatusBar">false</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
@@ -14,7 +13,6 @@
         <item name="colorPrimary">#FFFFFF</item>
         <item name="colorPrimaryDark">#FFFFFF</item>
         <item name="colorAccent">#000000</item>
-        <item name="android:windowLightStatusBar">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
@@ -22,8 +20,19 @@
         <item name="colorPrimary">#000000</item>
         <item name="colorPrimaryDark">#000000</item>
         <item name="colorAccent">#000000</item>
-        <item name="android:windowLightStatusBar">false</item>
         <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="Royal_BlueTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">#1976D2</item>
+        <item name="colorPrimaryDark">#004BA0</item>
+        <item name="colorAccent">#E6892D</item>
+    </style>
+
+    <style name="Calm_GreenTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">#1B5E20</item>
+        <item name="colorPrimaryDark">#003300</item>
+        <item name="colorAccent">#E4A1DF</item>
     </style>
 
 </resources>
