--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,29 @@
             android:layout_height="match_parent"
             android:clipToPadding="false"
             android:orientation="vertical">
-        <android.support.design.widget.TabLayout
+        <android.support.design.widget.AppBarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:tabMaxWidth="0dp"
-                app:tabGravity="fill"
-                android:id="@+id/tab_layout"/>
+                android:elevation="4dp">
+            <android.support.v7.widget.Toolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="?actionBarSize"
+                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+                    android:visibility="gone"
+                    android:id="@+id/toolbar_light"/>
+            <android.support.v7.widget.Toolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="?actionBarSize"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                    android:visibility="gone"
+                    android:id="@+id/toolbar_dark"/>
+            <android.support.design.widget.TabLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:tabMaxWidth="0dp"
+                    app:tabGravity="fill"
+                    android:id="@+id/tab_layout"/>
+        </android.support.design.widget.AppBarLayout>
         <android.support.v4.view.ViewPager
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
