--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -45,28 +45,28 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="Royal_BlueTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="BlueTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">#1976D2</item>
         <item name="colorPrimaryDark">#004BA0</item>
         <item name="colorAccent">#E6892D</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="Royal_BlueTheme_no_action_bar" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="BlueTheme_no_action_bar" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">#1976D2</item>
         <item name="colorPrimaryDark">#004BA0</item>
         <item name="colorAccent">#E6892D</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="Calm_GreenTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="GreenTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">#1B5E20</item>
         <item name="colorPrimaryDark">#003300</item>
         <item name="colorAccent">#E4A1DF</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="Calm_GreenTheme_no_action_bar" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="GreenTheme_no_action_bar" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">#1B5E20</item>
         <item name="colorPrimaryDark">#003300</item>
         <item name="colorAccent">#E4A1DF</item>
