--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -73,4 +73,18 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="PinkTheme" parent="Theme.AppCompat.Light">
+        <item name="colorPrimary">#F7BACF</item>
+        <item name="colorPrimaryDark">#C38A9E</item>
+        <item name="colorAccent">#084530</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
+    <style name="PinkTheme_no_action_bar" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">#F7BACF</item>
+        <item name="colorPrimaryDark">#C38A9E</item>
+        <item name="colorAccent">#084530</item>
+        <item name="android:windowContentOverlay">@null</item>
+    </style>
+
 </resources>
